--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,10 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.activation.jar=C:\\Users\\arne\\Documents\\NetBeansProjects\\CommunityShare\\activation.jar
+file.reference.json-lib-2.2.2-jdk15.jar=json-lib-2.2.2-jdk15.jar
+file.reference.JSON_parser_v1.0.3.jar=JSON parser v1.0.3.jar
+file.reference.json_simple-1.0.2.jar=json_simple-1.0.2.jar
+file.reference.json_simple-1.1.jar=json_simple-1.1.jar
 file.reference.mail.jar=C:\\Users\\arne\\Documents\\NetBeansProjects\\CommunityShare\\mail.jar
 file.reference.mail.jar-1=C:\\Users\\Ben\\Desktop\\mail.jar
 file.reference.sqljdbc4.jar=C:\\Users\\arne\\Documents\\NetBeansProjects\\CommunityShare\\sqljdbc4.jar
@@ -39,7 +43,11 @@ javac.classpath=\
     ${file.reference.activation.jar}:\
     ${file.reference.mail.jar}:\
     ${file.reference.sqljdbc4.jar}:\
-    ${file.reference.mail.jar-1}
+    ${file.reference.mail.jar-1}:\
+    ${file.reference.json-lib-2.2.2-jdk15.jar}:\
+    ${file.reference.json_simple-1.0.2.jar}:\
+    ${file.reference.JSON_parser_v1.0.3.jar}:\
+    ${file.reference.json_simple-1.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
