--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,19 +27,11 @@ dist.jar=${dist.dir}/CommunityShare.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.activation.jar=C:\\Users\\arne\\Documents\\NetBeansProjects\\CommunityShare\\activation.jar
-file.reference.mail.jar=C:\\Users\\arne\\Documents\\NetBeansProjects\\CommunityShare\\mail.jar
-file.reference.mail.jar-1=C:\\Users\\Ben\\Desktop\\mail.jar
-file.reference.sqljdbc4.jar=C:\\Users\\arne\\Documents\\NetBeansProjects\\CommunityShare\\sqljdbc4.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
-javac.classpath=\
-    ${file.reference.activation.jar}:\
-    ${file.reference.mail.jar}:\
-    ${file.reference.sqljdbc4.jar}:\
-    ${file.reference.mail.jar-1}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
