--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,14 +32,7 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.activation.jar}:\
-    ${file.reference.mail.jar}:\
-    ${file.reference.sqljdbc4.jar}:\
-    ${file.reference.mail.jar-1}:\
-    ${file.reference.json-lib-2.2.2-jdk15.jar}:\
-    ${file.reference.json_simple-1.0.2.jar}:\
-    ${file.reference.JSON_parser_v1.0.3.jar}:\
-    ${file.reference.json_simple-1.1.jar}
+    ${file.reference.mail.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
